@@ -1,3 +1,7 @@
+7/23/2006 - jdiamond
+
+ * Fixed a bug causing orders for a hosting service with term != 1 month to be $0
+
 7/22/2006 - jdiamond
 ====================
 
